Added contact button on top of docs page

--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -2449,8 +2449,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #5d6778;
-  border-color: #5d6778;
+  background-color: #FFFFFF;
+  border-color: #5445ff;
 }
 .btn-secondary:hover {
   color: #fff;
